--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "react-web",
   "version": "0.1.0",
-  "homepage": "https://Vlashex.github.io/tg-bot",
+  "homepage": "https://Vlashex.github.io/tg_bot/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@vkruglikov/react-telegram-web-app": "^2.1.4",
+    "node-telegram-bot-api": "^0.63.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -39,6 +41,7 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.0.0"
+    "gh-pages": "^6.0.0",
+    "react-router-dom": "^6.16.0"
   }
 }
