--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
   "devDependencies": {
     "@testing-library/react": "^14.0.0",
     "gh-pages": "^6.0.0",
-    "react-router-dom": "^6.16.0"
+    "lib": "^5.1.0",
+    "react-router-dom": "^6.16.0",
+    "types": "^0.1.1"
   }
 }
